--- a/springbootapp.yml
+++ b/springbootapp.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: springappcontainer
-        image: mylandmarktech/spring-boot-mongo
+        image: 251219981642/spring-boot-mongo
         ports:
         - containerPort: 8080
         env:
