--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   springapp:
-    image: 251219981642/appimage:latest
+    image: 251219981642/appimage:v1
     restart: always
     environment:
       - MONGO_DB_HOSTNAME=mongo
@@ -21,7 +21,7 @@ services:
     restart: always
 
   web:
-    image: 251219981642/webimage:latest
+    image: 251219981642/webimage:v1
     ports:
       - "8081:8081"
 volumes:
